Add welcome text and build instructions